--- a/NVerilogFormatter/NVerilogFormatter.csproj
+++ b/NVerilogFormatter/NVerilogFormatter.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NVerilogParser" Version="1.0.0-beta-05" />
+    <PackageReference Include="NVerilogParser" Version="1.0.0-xlocal-60" />
   </ItemGroup>
 
 </Project>
